cmake_minimum_required(VERSION 3.6)
project(file_transfer)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -Wpedantic")
set(SRC_CLI client.cpp)
set(SRC_SRV server.cpp)
set(SRC_SRVSIM server_simplified.cpp)
add_executable(client ${SRC_CLI})
add_executable(server ${SRC_SRV})
add_executable(server_simplified ${SRC_SRVSIM})
