cmake_minimum_required(VERSION 3.6)
project(reliable_udp)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
add_executable(sender1 sender1.cpp)
add_executable(receiver1 receiver1.cpp)
add_executable(sender2 sender2.cpp)
add_executable(receiver2 receiver2.cpp)
add_executable(sender3 sender3.cpp)
add_executable(receiver3 receiver3.cpp)
